<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_gradient"
    tools:context=".view.activity.DetailActivity">

    <ImageView
        android:id="@+id/img_detail"
        android:layout_width="140dp"
        android:layout_height="200dp"
        android:layout_marginTop="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="ContentDescription"
        tools:src="@color/cardview_dark_background" />

    <TextView
        android:id="@+id/tv_detail_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/amaranth"
        android:maxLines="2"
        android:gravity="center"
        android:textColor="@color/white"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="@+id/img_detail"
        app:layout_constraintStart_toStartOf="@+id/img_detail"
        app:layout_constraintTop_toBottomOf="@+id/img_detail"
        tools:text="Title" />

    <TextView
        android:id="@+id/tv_detail_date"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="@+id/tv_detail_title"
        app:layout_constraintStart_toStartOf="@+id/tv_detail_title"
        app:layout_constraintTop_toBottomOf="@+id/tv_detail_title"
        tools:text="date" />

    <TextView
        android:id="@+id/tv_detail_desc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:paddingHorizontal="10dp"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_detail_date"
        tools:text="@tools:sample/lorem/random" />

    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ToggleButton
        android:id="@+id/buttonFav"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="115dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/ic_love_selector"
        android:textOff=""
        android:textOn=""
        app:layout_constraintStart_toStartOf="@+id/img_detail"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>