<resources>
    <string name="app_name">Movie Catalogue</string>
    <string name="movies">MOVIES</string>
    <string name="tv_shows">TV SHOWS</string>
    <string name="movie_catalogue">Movie Catalogue</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="movies_fav">MOVIES FAVORITE</string>
    <string name="tv_shows_fav">TV SHOWS FAVORITE</string>
    <string name="undo">Item ini telah dihapus, tekan OK untuk membatalkannya</string>
    <string name="favorite_title">FAVORITE</string>
    <string name="no_data">No data</string>
</resources>